More HTTP mapping added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username = mikas2
 spring.datasource.password = mikas200
 
 spring.jpa.hibernate.ddl-auto= create-drop
+
+spring.jpa.show-sql = true
