--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url = jdbc:mysql://127.0.0.1:3306/studentv1
-spring.datasource.username = mikas2
-spring.datasource.password = mikas200
+spring.datasource.url = {JDBCUrl}
+spring.datasource.username = {JDBCUser}
+spring.datasource.password = {JDBCPass}
 
 spring.jpa.hibernate.ddl-auto= create-drop
 
